able to move green dot representing snake. collision works.

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'main'
-    mainClass = 'main.GameModel'
+    mainClass = 'gui.GUI'
 }
 
 javafx {
